<resources>
    <string name="app_name">GarageSale</string>
    <string name="welcome_screen_text">Press to Start Garage Sale App</string>
    <string name="button_to_start_app">Enter</string>

    <string name="button_start_date">Enter Start Date</string>
    <string name="button_end_date">Enter End Date</string>
    <string name="button_start_time">Enter Start Time</string>
    <string name="button_end_time">Enter End Time</string>
    <string name="button_menu">Menu</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_category_tab">CategoryTab</string>
    <string name="title_activity_saved_page">savedPage</string>

    <string name="Toys">Toys</string>
    <string name="BabyClothes">Baby Clothes</string>
    <string name="KidsClothes">Kids Clothes</string>
    <string name="YoungAdult">Young Adult Clothes</string>
    <string name="AdultClothes">Adult Clothes</string>
    <string name="electronics">Electronics</string>
    <string name="sportgoods">Sporting Goods</string>
    <string name="tools">Tools</string>
    <string name="appliances">Appliances</string>
    <string name="entertainment">Entertainment</string>
    <string name="videogames">Video Games</string>
    <string name="Misc">Misc.</string>
    <string name="Save">Save</string>
    <string name="Saved">Saved!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_sell_location">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_current_location">Current Location</string>
</resources>
